<resources>
    <string name="app_name">e-Shop</string>
    <string name="settings">Ajustes</string>
    <string name="cart">Carrito</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="your_account">Tu cuenta</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="search_hint">Búsqueda</string>

</resources>