<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/group1"
            android:title="@string/your_account">
            <menu>
                <item
                    android:id="@+id/sign_in"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/sign_in" />
                <item
                    android:id="@+id/cartFragment"
                    android:icon="@drawable/ic_baseline_shopping_cart_24"
                    android:title="@string/cart" />
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
            </menu>
        </item>
    </group>
</menu>