<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.german.eshop.customer.ui.fragment.ProductsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_productFragment_self"
            app:destination="@id/mainFragment" />
        <argument
            android:name="idFilter"
            app:argType="string"
            android:defaultValue=""/>
        <argument
            android:name="search"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.german.eshop.customer.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.german.eshop.customer.ui.fragment.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

</navigation>